--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+	@apply bg-eggshell transition-colors duration-300;
+}
+
+html.dark {
+	@apply bg-dark-blue;
+}
